# sigmatech-2

./: README.md  docker-compose.yml
api/: .env  README.md  alembic.ini  main.py  pyproject.toml
api/.shortcuts/: migrate-reset.sh  up.sh
api/core/: config.py  i18n.py  security.py
api/core/security/: __init__.py  api_binding_scope.py  auth_manager.py  auth_scope_strategy.py  auth_strategy.py  auth_type.py
api/db/: __init__.py  db_context.py  db_engine.py  engines.py  seed.py  session_context.py  transactional.py
api/exceptions/: __init__.py
api/exceptions/auth/: password_mismatched.py  unauthorized.py  user_not_found.py
api/exceptions/models/: attribute_exception.py  model_validation.py  unique_constraint.py
api/lang/: common.en.yml  common.vi.yml
api/middlewares/: auth.py
api/migrations/: env.py
api/migrations/versions/: 06acd476dc15_create_products_table.py  1985d2339c2b_create_products_table.py  2025_12_04_1821-51df9a70c469_create_posts_table.py  2025_12_04_1821-557f4035543c_create_users_table.py  2025_12_04_1822-1b921053b453_create_products_table.py  2025_12_04_1822-8bdfc9b9183d_create_refresh_tokens_table.py  2025_12_04_1823-12d9eedabe64_create_attributes_table.py  2025_12_04_1823-914b38b8fe04_create_product_attribute_table.py  234194600610_create_attributes_table.py  b35d697e98a1_.py  (+12 more)
api/models/: __init__.py  attribute.py  base.py  post.py  product.py  product_attribute.py  refresh_token.py  test.py  user.py
api/routes/: __init__.py
api/schemas/: __init__.py  attribute.py  auth.py  base.py  post.py  product.py  user.py
api/services/: __init__.py  post_service.py  product_service.py  user_service.py
api/tests/: test_crypto.py
api/utils/: constants.py  crypto.py  jwt.py
(+46 files in other folders)
