[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Nam Dinh Thanh",email = "thanhnamak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydash (>=8.0.5,<9.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-i18n[yaml] (>=0.3.9,<0.4.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"